--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,10 @@
 services:
-  # frontend:
-  #     build: ./frontend
-  #     ports:
-  #       - "3000:80"
-  #     depends_on:
-  #       - backend
+  frontend:
+      build: ./frontend
+      ports:
+        - "3000:80"
+      depends_on:
+        - backend
 
   backend:
     build: ./backend
