--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,10 @@
 services:
-  # frontend:
-  #     build: ./frontend
-  #     ports:
-  #       - "3000:80"
-  #     depends_on:
-  #       - backend
+  frontend:
+      build: ./frontend
+      ports:
+        - "3000:80"
+      depends_on:
+        - backend
 
   backend:
     build: ./backend
@@ -14,10 +14,6 @@ services:
       - mongo
     environment:
       - MONGO_URI=mongodb://mongo:27017/TravelRecDB
-    # develop:
-    #   watch:
-    #     - path: ./backend
-    #       action: sync
 
   mongo:
     image: mongo
