--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,3 +7,4 @@ RUN npm run build && ls /app
 
 FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
